# Educational_Robot_zephyrOS

./: CMakeLists.txt  README.md  prj.conf
boards/: esp32_devkitc_wroom_esp32_procpu.overlay  esp32_devkitc_wroom_procpu.conf  esp32_devkitc_wroom_procpu.overlay
docs/: readme.md
include/: broker_connect.h  config.h  connection_manager.h  mqtt_publish.h  servo_control.h  wifi_connect.h
src/: broker_connect.c  connection_manager.c  main.c  mqtt_publish.c  servo_control.c  wifi_connect.c
